--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ footer{
   padding-top: 100px;
   padding-left: 750px;
 }
+form{
+  font-family: sans-serif;
+  font-size: 25px;
+  color: black;
+  padding-bottom: 100px;
+}
